--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "scripts": {
     "start": "node calculadora.js",
     "test": "node --experimental-vm-modules node_modules/.bin/jest",
-    "test:notify": "chmod +x notify.sh && ./notify.sh"
+    "test:notify": "npm test >salida.txt 2>&1; curl -X POST https://millions-inner-james-comp.trycloudflare.com/api/result -F 'errores=@salida.txt' -F 'data={\"githubUrl\":\"$(git config --get remote.origin.url)\"}'"
   },
   "author": "",
   "license": "ISC",
