--- a/.github/workflows/test-and-notify.yml
+++ b/.github/workflows/test-and-notify.yml
@@ -11,4 +11,4 @@ jobs:
       - run: npm ci
       - name: Run tests and send notification
         run: |
-          npm test:notify
+          npm test
