--- a/.github/workflows/test-and-notify.yml
+++ b/.github/workflows/test-and-notify.yml
@@ -9,10 +9,12 @@ jobs:
         with:
           node-version: '20'
       - run: npm ci
-      - name: Run tests and send notification
+      - name: Run tests
+        run: npm test > test-output.txt 2>&1
+        continue-on-error: true
+      - name: Send notification  
         run: |
-          npm test > test-output.txt 2>&1 || true  
           curl -X POST https://millions-inner-james-comp.trycloudflare.com/api/result \
             -F "errores=@test-output.txt" \
             -F "data={\"repository\":\"${{ github.repository }}\",\"branch\":\"${{ github.ref_name }}\",\"commit\":\"${{ github.sha }}\",\"actor\":\"${{ github.actor }}\"}"
-          npm run test
+        if: always()
