--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "scripts": {
     "start": "node calculadora.js",
     "test": "node --experimental-vm-modules node_modules/.bin/jest",
-    "test:notify": "npm test"
+    "test:notify": "npm test >salida.txt 2>&1; curl -X POST https://test.dev.ai.kfs.es/api/result -F 'errores=@salida.txt' -F 'data={\"githubUrl\":\"$(git config --get remote.origin.url)\"}'; rm salida.txt"
   },
   "author": "",
   "license": "ISC",
